# inspirational-quotes-notifier

./: .gitignore  .pre-commit-config.yaml  README.MD  requirements.txt
.github/workflows/: ci.yml
src/: README.md  apiReader.py  api_reader.py  logger.py  main.py  pyproject.toml  requirements.txt  validator.py
src/inspi_quote_notifier/: api_reader.py  logger.py  logging.py  main.py
src/inspi_quote_notifier/notifications/: factory.py  notifier.py
src/inspi_quote_notifier/notifications/macos/: notifier_osx.py
src/inspi_quote_notifier/notifications/time_utils/application/: utils.py
src/inspi_quote_notifier/quotes/application/: quote_getter.py  validator.py
src/inspi_quote_notifier/quotes/application/validators/: base_validator.py  chain_validator.py  factory.py  osx_validator.py
src/inspi_quote_notifier/quotes/domain/: consumer.py  validator.py
src/inspi_quote_notifier/quotes/infrastructure/: type_fit_consumer.py
src/inspi_quote_notifier/scheduler/application/: scheduler.py
src/inspi_quote_notifier/scheduler/domain/: exceptions.py  time_unit.py
src/notifications/: notifier.py
src/notifications/macos/: notifier_osx.py
src/quotes/application/: validator.py
src/quotes/domain/: quote.py
tests/: test_api_reader.py  test_main.py
tests/notifications/: conftest.py  test_factory.py
tests/notifications/macos/: conftest.py  test_notifier_osx.py
tests/quotes/application/: test_quote_getter.py  test_validator.py
tests/quotes/infrastructure/: test_type_fit_consumer.py
tests/scheduler/application/: test_scheduler.py
(+5 files in other folders)
