[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspi_quote_notifier"
version = "0.0.1"
authors = [
  { name="Alexander Vera", email="alexanderjoel.vera99@gmail.com" }
]
description = "Inspirational quotes notifier"
readme = "README.md"
requires-python = ">=3.9.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pync==2.0.3",
    "requests==2.31.0",
    "retry==0.9.2"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pre-commit==3.6.2"
]

[project.scripts]
inspi_notifier = "inspi_quote_notifier.main:main"
